--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
 
     <link href="pg-pessoal.css" rel="stylesheet"> 
@@ -72,4 +72,5 @@
         
     </div>
 </body>
+
 </html>
